[tool.poetry]
name = "kintree"
version = "1.0.99" # placeholder
description = "Fast part creation in KiCad and InvenTree"
authors = ["eeintech <eeintech@eeinte.ch>"]
maintainers = ["eeintech <eeintech@eeinte.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sparkmicro/Ki-nTree"
repository = "https://github.com/sparkmicro/Ki-nTree"
keywords = ["inventree", "kicad", "component", "part", "create"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
digikey-api = "^1.0.0"
Flet = "^0.4.2"
thefuzz = "^0.19.0"
inventree = "^0.9.2"
kiutils = "^1.3.0"
mouser = "^0.1.2"
multiprocess = "^0.70.12"
PyYAML = "^5.4.1"
validators = "^0.19.0"
wrapt_timeout_decorator = "^1.3.12"

[tool.poetry.dev-dependencies]
invoke = "^1.7.3"
coveralls = "^3.3.1"

[tool.poetry.scripts]
kintree = 'kintree.kintree_gui:main'
kintree_setup_inventree = 'kintree.setup_inventree:setup_inventree'

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
