[tool.poetry]
name = "kintree"
version = "1.1.99" # placeholder
description = "Fast part creation in KiCad and InvenTree"
authors = ["eeintech <eeintech@eeinte.ch>"]
maintainers = ["eeintech <eeintech@eeinte.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sparkmicro/Ki-nTree"
repository = "https://github.com/sparkmicro/Ki-nTree"
keywords = ["inventree", "kicad", "digikey", "mouser", "component", "part", "create"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
digikey-api = "^1.0.0"
# digikey-api = { git = "https://github.com/hurricaneJoef/digikey-api.git", branch = "master" }
flet = "^0.23.0"
thefuzz = "^0.19.0"
inventree = "^0.14.0"
kiutils = "^1.4.0"
mouser = "^0.1.3"
multiprocess = "^0.70.12"
pyyaml = "^6.0.1"
validators = "^0.19.0"
wrapt_timeout_decorator = "^1.3.12"
cloudscraper = "^1.2.71"

[tool.poetry.dev-dependencies]
invoke = "^2.0.0"
coveralls = "^3.3.1"

[tool.poetry.scripts]
kintree = 'kintree.kintree_gui:main'
kintree_setup_inventree = 'kintree.setup_inventree:setup_inventree'

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
